Added ability to query users, moved business logic to UserService, updated OpenAPI doc
