# server/src/main/java/team/gif/friendscheduler/controller/Controller.java
@@ -13,14 +13,17 @@ import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import team.gif.friendscheduler.UserRepository;
 import team.gif.friendscheduler.exception.AccessDeniedException;
+import team.gif.friendscheduler.exception.IncorrectCredentialsException;
 import team.gif.friendscheduler.exception.InvalidFieldException;
 import team.gif.friendscheduler.exception.UserNotFoundException;
 import team.gif.friendscheduler.model.TimeBlock;
 import team.gif.friendscheduler.model.User;
 import team.gif.friendscheduler.service.FieldValidator;
+import team.gif.friendscheduler.service.UserService;
 
 import java.util.LinkedList;
 import java.util.List;
@@ -32,10 +35,13 @@ public class Controller {
 	@Autowired
 	private UserRepository userRepository;
 	
+	@Autowired
+	private UserService userService;
+	
 	private FieldValidator fieldValidator = new FieldValidator(); // TODO: make this an actual service?
 	
 	
-	@GetMapping("/hello")
+	@GetMapping(value = "/hello", produces = MediaType.TEXT_PLAIN_VALUE)
 	public ResponseEntity<String> hello() {
 		return ResponseEntity.ok("Hello world");
 	}
@@ -46,16 +52,11 @@ public class Controller {
 			@RequestHeader("username") String username,
 			@RequestHeader("password") String password) {
 		
-		User target = userRepository
-				.findUserByUsername(username)
-				.orElseThrow(() -> new UserNotFoundException(username));
-		
-		if (!password.equals(target.getPassword())) {
-			return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
-		}
+		User target = userService.authenticate(username, password);
+		Long token = userService.generateSessionToken(target.getId());
 		
 		return ResponseEntity.status(HttpStatus.OK)
-				.header("token", "" + target.getId())
+				.header("token", "" + token)
 				.body(target);
 	}
 	
@@ -67,17 +68,28 @@ public class Controller {
 		fieldValidator.validateUser(user);
 		userRepository.save(user);
 		
+		Long token = userService.generateSessionToken(user.getId());
+		
 		return ResponseEntity.status(HttpStatus.CREATED)
-				.header("token", "" + user.getId())
+				.header("token", "" + token)
 				.body(user);
 	}
 	
 	
-	@GetMapping(value = "/user", consumes = MediaType.APPLICATION_JSON_VALUE)
+	@GetMapping(value = "/user")
 	public ResponseEntity<User> getUser(
+			@RequestParam(value = "id", required = false) Long id,
+			@RequestParam(value = "snowflake", required = false) Long discordSnowflake,
+			@RequestParam(value = "username", required = false) String username,
+			@RequestParam(value = "email", required = false) String email,
 			@RequestHeader("token") Long token) {
+		
+		User result = userService.queryUsers(id, discordSnowflake, username, email);
+		
+		if (result == null) {
+			result = userService.getUser(userService.getIdFromToken(token));
+		}
 	
-		User result = userRepository.findById(token).orElseThrow(() -> new UserNotFoundException(token));
 		return ResponseEntity.ok(result);
 	}
 	
@@ -87,20 +99,10 @@ public class Controller {
 			@RequestHeader("token") Long token,
 			@RequestBody User user) {
 		
-		User target = userRepository.findById(token).orElseThrow(() -> new UserNotFoundException(token));
+		Long id = userService.getIdFromToken(token);
+		User result = userService.updateUser(id, user);
 		
-		if (user.getDiscordSnowflake() != null)
-			target.setDiscordSnowflake(user.getDiscordSnowflake());
-		
-		if (user.getEmail() != null)
-			target.setEmail(user.getEmail());
-		
-		if (user.getDisplayName() != null)
-			target.setDisplayName(user.getDisplayName());
-		
-		userRepository.save(target);
-		
-		return ResponseEntity.ok(target);
+		return ResponseEntity.ok(result);
 	}
 	
 	
@@ -108,8 +110,8 @@ public class Controller {
 	public ResponseEntity<Void> deleteUser(
 			@RequestHeader("token") Long token) {
 		
-		if (!userRepository.existsById(token)) throw new UserNotFoundException(token);
-		userRepository.deleteById(token);
+		Long id = userService.getIdFromToken(token);
+		userService.deleteUser(id);
 		
 		return ResponseEntity.noContent().build();
 	}
@@ -198,6 +200,12 @@ public class Controller {
 	@ExceptionHandler(AccessDeniedException.class)
 	public ResponseEntity<String> handleAccessDeniedException(AccessDeniedException ex) {
 		return ResponseEntity.status(HttpStatus.FORBIDDEN).body(ex.getMessage());
+	}
+	
+	
+	@ExceptionHandler(IncorrectCredentialsException.class)
+	public ResponseEntity<String> handleIncorrectCredentialsException(IncorrectCredentialsException ex) {
+		return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(ex.getMessage());
 	}
 	
 }
